💄 결제 예정금액 color 적용

--- a/css/cart.css
+++ b/css/cart.css
@@ -273,5 +273,10 @@ main {
       left: 100%;
       transform: translate(-50%, -50%);
     }
+    li:nth-of-type(4) {
+      span {
+        color: var(--error-color);
+      }
+    }
   }
 }
