--- a/css/cart.css
+++ b/css/cart.css
@@ -32,7 +32,7 @@ main {
       text-align: center;
     }
     li:first-of-type {
-      flex: 0.5;
+      flex: 0.8;
     }
     li:nth-of-type(2) {
       flex: 5;
@@ -69,227 +69,229 @@ main {
       height: 6.8rem;
     }
   }
-  .cart-item {
-    background-color: unset;
-    margin-bottom: 8rem;
+}
+.cart-item {
+  background-color: unset;
+  margin-bottom: 8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  li {
+    width: 100%;
+    box-sizing: border-box;
+    border: solid #e0e0e0 0.2rem;
+    border-radius: 1rem;
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    li {
+    article {
+      position: relative;
       width: 100%;
-      box-sizing: border-box;
-      border: solid #e0e0e0 0.2rem;
-      border-radius: 1rem;
+      height: 20rem;
       display: flex;
-      article {
-        position: relative;
+      input {
+        margin: auto 3rem;
+        min-width: 2rem;
+      }
+
+      label {
         width: 100%;
-        height: 20rem;
         display: flex;
-        input {
-          margin: auto 3rem;
-        }
-
-        label {
-          width: 100%;
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-        }
-      }
-      .goods-details {
-        flex: 1.7;
-        display: grid;
-        grid-template-areas:
-          "img seller"
-          "img name"
-          "img price"
-          "img price"
-          "img delivery";
+        flex-direction: row;
         align-items: center;
-        justify-content: start;
-        row-gap: 1rem;
-        column-gap: 3.6rem;
-        img {
-          width: 16rem;
-          height: 16rem;
-          border-radius: 1rem;
-          grid-area: img;
-        }
-        p {
-          font-size: 1.4rem;
-          color: var(--font-color);
-        }
-        p:first-of-type {
-          grid-area: seller;
-        }
-        h3 {
-          grid-area: name;
-        }
-        span {
-          grid-area: price;
-          align-self: self-start;
-          font-size: 1.6rem;
-          font-weight: bold;
-        }
-        span:after {
-          content: "원";
-        }
-        p:last-of-type {
-          grid-area: delivery;
-        }
-      }
-      .goods-quantity {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        position: relative;
-        input {
-          margin: 0;
-          width: 15rem;
-          height: 5rem;
-          border-radius: 0.5rem;
-          text-align: center;
-          border: solid 0.1rem var(--border-color);
-          background-color: var(--main-color);
-        }
-        input::-webkit-inner-spin-button {
-          -webkit-appearance: none;
-        }
-
-        .minus,
-        .plus {
-          position: relative;
-          background-color: #ffffff1a;
-          border: none;
-          width: 5rem;
-          height: 5rem;
-          top: 0.2rem;
-        }
-
-        .minus img,
-        .plus img {
-          width: 2rem;
-          height: 2rem;
-        }
-
-        .minus {
-          border-right: solid 0.1rem var(--border-color);
-          left: 5rem;
-        }
-
-        .plus {
-          border-left: solid 0.1rem var(--border-color);
-          right: 5rem;
-        }
-      }
-      .goods-price {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 2.6rem;
-        p {
-          font-weight: bold;
-          color: var(--error-color);
-        }
-        button {
-          padding: 1rem 3.563rem;
-        }
-      }
-      .delete-btn {
-        background-color: unset;
-        border: none;
-        position: absolute;
-        width: fit-content;
-        top: 1.8rem;
-        right: 1.8rem;
       }
     }
-  }
-  .cart-calc {
-    margin-bottom: 4rem;
-    li {
-      width: 100%;
-      height: 15rem;
+    .goods-details {
+      flex: 1.7;
+      display: grid;
+      grid-template-areas:
+        "img seller"
+        "img name"
+        "img price"
+        "img price"
+        "img delivery";
+      align-items: center;
+      justify-content: start;
+      row-gap: 1rem;
+      column-gap: 3.6rem;
+      img {
+        width: 16rem;
+        height: 16rem;
+        border-radius: 1rem;
+        grid-area: img;
+      }
+      p {
+        font-size: 1.4rem;
+        color: var(--font-color);
+      }
+      p:first-of-type {
+        grid-area: seller;
+      }
+      h3 {
+        grid-area: name;
+      }
+      span {
+        grid-area: price;
+        align-self: self-start;
+        font-size: 1.6rem;
+        font-weight: bold;
+      }
+      span:after {
+        content: "원";
+      }
+      p:last-of-type {
+        grid-area: delivery;
+      }
+    }
+    .goods-quantity {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      position: relative;
+      input {
+        margin: 0;
+        width: 15rem;
+        height: 5rem;
+        border-radius: 0.5rem;
+        text-align: center;
+        border: solid 0.1rem var(--border-color);
+        background-color: var(--main-color);
+      }
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+      }
+
+      .minus,
+      .plus {
+        position: relative;
+        background-color: #ffffff1a;
+        border: none;
+        width: 5rem;
+        height: 5rem;
+        top: 0.2rem;
+      }
+
+      .minus img,
+      .plus img {
+        width: 2rem;
+        height: 2rem;
+      }
+
+      .minus {
+        border-right: solid 0.1rem var(--border-color);
+        left: 5rem;
+      }
+
+      .plus {
+        border-left: solid 0.1rem var(--border-color);
+        right: 5rem;
+      }
+    }
+    .goods-price {
       flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      gap: 1.2rem;
+      gap: 2.6rem;
+      white-space: nowrap;
       p {
-        font-size: 1.6rem;
-      }
-      span {
-        font-size: 2.4rem;
         font-weight: bold;
-      }
-      span::after {
-        content: "원";
-        font-size: 1.6rem;
-        font-weight: normal;
-        margin-left: 0.2rem;
-      }
-    }
-    li:first-of-type {
-      position: relative;
-    }
-
-    li:first-of-type::after {
-      content: "";
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 3.4rem;
-      height: 3.4rem;
-      border-radius: 50%;
-      background-color: var(--main-color);
-      background-image: url(../assets/icon-minus-line.svg);
-      background-repeat: no-repeat;
-      background-position: center;
-      position: absolute;
-      top: 50%;
-      left: 100%;
-      transform: translate(-50%, -50%);
-    }
-
-    li:nth-of-type(2) {
-      position: relative;
-    }
-
-    li:nth-of-type(2)::after {
-      content: "";
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 3.4rem;
-      height: 3.4rem;
-      border-radius: 50%;
-      background-color: var(--main-color);
-      background-image: url(../assets/icon-plus-line.svg);
-      background-repeat: no-repeat;
-      background-position: center;
-      position: absolute;
-      top: 50%;
-      left: 100%;
-      transform: translate(-50%, -50%);
-    }
-    li:nth-of-type(4) {
-      span {
         color: var(--error-color);
       }
+      button {
+        padding: 1rem 3.563rem;
+      }
+    }
+    .delete-btn {
+      background-color: unset;
+      border: none;
+      position: absolute;
+      width: fit-content;
+      top: 1.8rem;
+      right: 1.8rem;
     }
   }
+}
+.cart-calc {
+  margin-bottom: 4rem;
+  li {
+    width: 100%;
+    height: 15rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.2rem;
+    p {
+      font-size: 1.6rem;
+    }
+    span {
+      font-size: 2.4rem;
+      font-weight: bold;
+    }
+    span::after {
+      content: "원";
+      font-size: 1.6rem;
+      font-weight: normal;
+      margin-left: 0.2rem;
+    }
+  }
+  li:first-of-type {
+    position: relative;
+  }
 
-  .empty-cart {
-    font-weight: bold;
-    margin: 20rem auto 1.7rem auto;
+  li:first-of-type::after {
+    content: "";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 3.4rem;
+    height: 3.4rem;
+    border-radius: 50%;
+    background-color: var(--main-color);
+    background-image: url(../assets/icon-minus-line.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    transform: translate(-50%, -50%);
   }
-  .empty-cart + span {
-    color: var(--font-color);
-    margin-bottom: 44.2rem;
+
+  li:nth-of-type(2) {
+    position: relative;
   }
+
+  li:nth-of-type(2)::after {
+    content: "";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 3.4rem;
+    height: 3.4rem;
+    border-radius: 50%;
+    background-color: var(--main-color);
+    background-image: url(../assets/icon-plus-line.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    transform: translate(-50%, -50%);
+  }
+  li:nth-of-type(4) {
+    span {
+      color: var(--error-color);
+    }
+  }
+}
+
+.empty-cart {
+  font-weight: bold;
+  margin: 20rem auto 1.7rem auto;
+}
+.empty-cart + span {
+  color: var(--font-color);
+  margin-bottom: 44.2rem;
 }
 
 input[type="checkbox"],
@@ -303,4 +305,121 @@ input[type="checkbox"],
 input[type="checkbox"]:checked,
 .all-check-btn.active {
   background-image: url(../assets/circle-check--fill-box.svg);
+}
+
+@media screen and (max-width: 850px) {
+  .cart-item li {
+    article input {
+      margin: auto;
+    }
+    .goods-details {
+      row-gap: 0;
+      img {
+        width: 14rem;
+        height: 14rem;
+      }
+      p {
+        font-size: 1rem;
+      }
+      h3 {
+        font-size: 1.4rem;
+      }
+      span {
+        font-size: 1.4rem;
+      }
+    }
+    .goods-quantity {
+      input {
+        width: 8rem;
+        height: 2.6rem;
+      }
+      .plus img,
+      .minus img {
+        display: flex;
+      }
+      .plus,
+      .minus {
+        width: 3rem;
+        height: 3rem;
+        top: 0;
+      }
+      .plus {
+        right: 3rem;
+      }
+      .minus {
+        left: 3rem;
+      }
+    }
+  }
+  main .cart-info {
+    li:nth-of-type(5) {
+      transform: translate(-25%, 0.3rem);
+    }
+  }
+  .cart-calc {
+    li {
+      height: 13rem;
+      p {
+        font-size: 1.4rem;
+      }
+      span {
+        font-size: 1.8rem;
+      }
+    }
+    li:first-of-type::after,
+    li:nth-of-type(2)::after {
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+  }
+}
+@media screen and (max-width: 550px) {
+  .cart-item li {
+    .goods-details {
+      row-gap: 0.5rem;
+      grid-template-areas:
+        "img"
+        "seller"
+        "name"
+        "price"
+        "delivery";
+
+      img {
+        width: 10rem;
+        height: 10rem;
+      }
+    }
+
+    .goods-price {
+      p {
+        font-size: 1.4rem;
+      }
+      button {
+        padding: 0.5rem 1rem;
+      }
+    }
+
+    .delete-btn {
+      top: 0.5rem;
+      right: 0rem;
+    }
+  }
+  main .cart-info {
+    li:nth-of-type(5) {
+      top: -3rem;
+      right: -1rem;
+    }
+  }
+  .cart-calc {
+    li {
+      height: 10rem;
+      white-space: nowrap;
+      p {
+        font-size: 1.2rem;
+      }
+      span {
+        font-size: 1.4rem;
+      }
+    }
+  }
 }
