--- a/css/order.css
+++ b/css/order.css
@@ -88,6 +88,10 @@ main {
         flex: 1;
         text-align: center;
       }
+      .price {
+        color: #000;
+        font-weight: bold;
+      }
     }
   }
 }
