--- a/css/sellerDashBoard.css
+++ b/css/sellerDashBoard.css
@@ -1,153 +1,230 @@
 main {
-  padding: 4.4rem 10rem;
-  position: relative;
-  section {
-    display: flex;
-    gap: 3rem;
-    section {
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      border: solid 0.1rem var(--border-color);
-      border-radius: 0.5rem;
-      gap: 0;
-
-      .goods-info-list {
-        font-size: 1.8rem;
-        height: 6rem;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        border-bottom: solid 0.1rem var(--border-color);
-        li:first-of-type {
-          flex: 4;
-        }
-        li:nth-of-type(2) {
-          flex: 2;
-        }
-        li:nth-of-type(3) {
-          flex: 1;
-        }
-        li:nth-of-type(4) {
-          flex: 1;
-        }
-      }
-      .goods {
-        li {
-          width: 100%;
-        }
-        article {
-          display: flex;
-          align-items: center;
-          border-bottom: solid 0.1rem var(--border-color);
-          font-size: 1.8rem;
-          img {
-            max-width: 7rem;
-            border-radius: 50%;
-            /* flex: 1; */
-          }
-          div {
-            /* flex: 4; */
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            h4 {
-              font-weight: 500;
-            }
-            p {
-              font-size: 1.6rem;
-              color: var(--font-color);
-            }
-          }
-          p:not(div p) {
-            /* flex: 2; */
-            text-align: center;
-          }
-          button {
-            /* flex: 1; */
-            max-width: 8rem;
-            font-size: 1.6rem;
-          }
-          .deleteBtn {
-            background-color: var(--main-color);
-            border: 0.1rem solid var(--border-color);
-            color: var(--font-color);
-          }
-        }
-      }
-    }
-  }
+  max-width: 192rem;
+  margin: 4.4rem auto;
+  padding: 0 10rem;
+  display: grid;
+  grid-template-areas:
+    "section section"
+    "section2 section3";
+  grid-template-columns: 25rem 1fr;
+  column-gap: 3rem;
 }
 
 button {
   background-color: var(--point-color);
   color: var(--main-color);
   border-radius: 0.5rem;
-  padding: 1.5rem 2rem;
-  box-sizing: border-box;
-  font-size: 1.8rem;
-}
-.uploadBtn {
-  width: 100%;
-  max-width: 16.8rem;
-  max-height: 5.4rem;
   display: flex;
-  gap: 0.8rem;
-  position: absolute;
-  top: 3.8rem;
-  right: 10rem;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.8rem;
+  padding: 0;
 }
 
-h2 {
-  font-weight: bold;
-  font-size: 3.4rem;
-  margin-bottom: 4.2rem;
-  span {
-    font-weight: initial;
-    color: var(--point-color);
-  }
-}
-nav {
-  width: 100%;
-  max-width: 25rem;
-  li {
-    height: 5rem;
-    border-radius: 0.5rem;
-    button {
-      width: 100%;
-      height: 100%;
-      color: #000;
-      font-size: 1.6rem;
-      display: flex;
-      align-items: center;
-    }
-  }
-  li:has(button.active) {
-    background-color: var(--point-color);
-    button {
-      color: var(--main-color);
-    }
-  }
-  button:not(li:first-of-type button) {
-    background-color: var(--main-color);
-    justify-content: space-between;
-    span {
-      font-size: 1.2rem;
-      width: 2rem;
-      height: 2rem;
-      color: var(--main-color);
-      background-color: var(--error-color);
-      border-radius: 50%;
-    }
-  }
-}
+section:first-of-type {
+  grid-area: section;
+  display: flex;
+  justify-content: space-between;
+  gap: 3rem;
 
-@media screen and (max-width: 780px) {
-  main {
-    padding: 2.4rem 5rem;
-  }
   h2 {
-    font-size: 2.4rem;
-    margin-bottom: 2.4rem;
+    font-weight: bold;
+    font-size: 3.4rem;
+    margin-bottom: 4.2rem;
+    span {
+      font-weight: initial;
+      color: var(--point-color);
+    }
+  }
+
+  .uploadBtn {
+    width: 100%;
+    max-width: 16.8rem;
+    max-height: 5.4rem;
+    display: flex;
+    gap: 0.8rem;
+  }
+}
+
+section:nth-of-type(2) {
+  grid-area: section2;
+  nav {
+    width: 100%;
+    max-width: 25rem;
+    li {
+      height: 5rem;
+      border-radius: 0.5rem;
+      button {
+        width: 100%;
+        height: 100%;
+        color: #000;
+        font-size: 1.6rem;
+        display: flex;
+        justify-content: start;
+        padding: 0 2rem;
+      }
+    }
+    li:has(button.active) {
+      background-color: var(--point-color);
+      button {
+        color: var(--main-color);
+      }
+    }
+    button:not(li:first-of-type button) {
+      background-color: var(--main-color);
+      justify-content: space-between;
+      span {
+        font-size: 1.2rem;
+        width: 2rem;
+        height: 2rem;
+        color: var(--main-color);
+        background-color: var(--error-color);
+        border-radius: 50%;
+      }
+    }
+  }
+}
+
+section:last-of-type {
+  grid-area: section3;
+  display: flex;
+  flex-direction: column;
+  border: solid 0.1rem var(--border-color);
+  border-radius: 0.5rem;
+  gap: 0;
+
+  .goods-info-list {
+    font-size: 1.8rem;
+    height: 6rem;
+    display: grid;
+    align-items: center;
+    text-align: center;
+    grid-template-areas: "info price update delete";
+    grid-template-columns: 2fr 1fr 0.5fr 0.5fr;
+
+    border-bottom: solid 0.1rem var(--border-color);
+  }
+  .goods-info-list li:first-of-type {
+    grid-area: info;
+  }
+  .goods-info-list li:nth-of-type(2) {
+    grid-area: price;
+  }
+  .goods-info-list li:nth-of-type(3) {
+    grid-area: update;
+  }
+  .goods-info-list li:nth-of-type(4) {
+    grid-area: delete;
+  }
+
+  .goods {
+    height: 88.4rem;
+    overflow: scroll;
+    background-color: var(--border-color);
+    article {
+      background-color: var(--main-color);
+      padding: 1.6rem 0;
+      display: grid;
+      grid-template-areas: "img info price buttons";
+      grid-template-columns: 11rem 1.7fr 1fr 1fr;
+      align-items: center;
+      border-bottom: solid 0.1rem var(--border-color);
+      font-size: 1.8rem;
+
+      img {
+        grid-area: img;
+        margin: auto;
+        max-width: 7rem;
+        border-radius: 50%;
+      }
+      div:first-of-type {
+        grid-area: info;
+
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        h3 {
+          font-weight: 500;
+        }
+        p {
+          font-size: 1.6rem;
+          color: var(--font-color);
+        }
+      }
+      p:not(div p) {
+        grid-area: price;
+        text-align: center;
+      }
+      div:last-of-type {
+        grid-area: buttons;
+
+        display: flex;
+        justify-content: space-around;
+      }
+      button {
+        width: 100%;
+        max-width: 8rem;
+        height: 4rem;
+        font-size: 1.6rem;
+      }
+      .deleteBtn {
+        background-color: var(--main-color);
+        border: 0.1rem solid var(--border-color);
+        color: var(--font-color);
+      }
+    }
+  }
+}
+@media screen and (max-width: 880px) {
+  main {
+    padding: 0 5rem;
+    grid-template-columns: none;
+    column-gap: normal;
+  }
+}
+@media screen and (max-width: 780px) {
+  section:first-of-type {
+    align-items: center;
+    h2 {
+      font-size: 2.4rem;
+      margin-bottom: 2rem;
+    }
+    .uploadBtn {
+      justify-content: center;
+      max-width: 12rem;
+      height: 4rem;
+      font-size: 1.6rem;
+      img {
+        width: 2rem;
+        height: 2rem;
+      }
+    }
+  }
+  section:last-of-type .goods article {
+    grid-template-areas:
+      "img  price buttons"
+      "info price buttons";
+    grid-template-columns: 2fr 1fr 1fr;
+
+    h3,
+    p:not(div p) {
+      font-size: 1.4rem;
+    }
+    div:first-of-type {
+      padding: 0 1rem;
+      gap: 0.5rem;
+      p {
+        font-size: 1.2rem;
+      }
+    }
+  }
+}
+@media screen and (max-width: 600px) {
+  main {
+    padding: 0 2rem;
+    grid-template-areas:
+      "section"
+      "section2 "
+      "section3";
   }
 }
