--- a/css/common.css
+++ b/css/common.css
@@ -217,7 +217,7 @@ input[type="checkbox"] + label {
   filter: drop-shadow(0 -0.2rem 0.2rem rgba(0, 0, 0, 0.1));
 }
 /* 판매자센터 버튼 */
-.sellerCenter button {
+.sellerCenter a {
   width: 16.8rem;
   height: 5.4rem;
   font-size: 1.8rem;
@@ -328,7 +328,7 @@ address {
   #search::placeholder {
     color: #fff;
   }
-  .sellerCenter button {
+  .sellerCenter a {
     width: 100%;
     white-space: nowrap;
     display: flex;
