--- a/css/common.css
+++ b/css/common.css
@@ -65,7 +65,8 @@ input[type="checkbox"] + label {
   }
 }
 
-.GNB.seller {
+.GNB.seller,
+.GNB.buyer {
   justify-content: flex-start;
   padding: 3.3rem 0 3.3rem 10rem;
   gap: 1.6rem;
@@ -291,7 +292,8 @@ address {
   }
 }
 @media screen and (max-width: 780px) {
-  .GNB.seller {
+  .GNB.seller,
+  .GNB.buyer {
     padding: 3.3rem 0 3.3rem 5rem;
     gap: 1.4rem;
 
@@ -320,7 +322,8 @@ address {
   }
 }
 @media screen and (max-width: 550px) {
-  .GNB.seller {
+  .GNB.seller,
+  .GNB.buyer {
     padding: 3.3rem 0 3.3rem 2rem;
     gap: 1.4rem;
   }
