--- a/css/common.css
+++ b/css/common.css
@@ -57,7 +57,6 @@ input[type="checkbox"] + label {
   z-index: 100;
   background-color: var(--main-color);
   box-shadow: 0 0.4rem 0.5rem 0 #0000001a;
-
   h1 img {
     width: 100%;
     max-width: 12.4rem;
@@ -174,20 +173,18 @@ input[type="checkbox"] + label {
 .myPageModal {
   position: absolute;
   top: 6rem;
-  left: -3rem;
+  left: -3.2rem;
   z-index: 200;
-
   width: 13rem;
   height: 11.8rem;
   box-sizing: border-box;
   padding: 1rem;
-
   border: none;
   border-radius: 1rem;
   box-shadow: 0 0 0.6rem 0 rgba(0, 0, 0, 25%);
 
   button {
-    width: 11rem;
+    width: 100%;
     height: 4rem;
     margin-bottom: 0.8rem;
 
@@ -301,7 +298,6 @@ address {
       font-size: 2.4rem;
     }
   }
-
   .btn-wrap ul {
     gap: 0rem;
   }
