💄 버튼 disabled 스타일 적용

--- a/css/sellerGoods.css
+++ b/css/sellerGoods.css
@@ -189,6 +189,11 @@ h2 {
       background-color: var(--point-color);
       color: var(--main-color);
     }
+    button:disabled {
+      background-color: var(--font-color);
+      color: var(--main-color);
+      cursor: not-allowed;
+    }
   }
 }
 
