--- a/css/sellerGoods.css
+++ b/css/sellerGoods.css
@@ -144,6 +144,7 @@ h2 {
         background: url("../assets/icon-img.png") no-repeat center
           var(--border-color);
         margin: 0;
+        cursor: pointer;
       }
     }
     div {
