💄 주문취소 버튼 disabled 스타일 적용

--- a/css/order.css
+++ b/css/order.css
@@ -327,11 +327,11 @@ main {
       background-color: var(--point-color);
       color: var(--main-color);
     }
-    /* .cancelBtn:disabled {
+    .cancelBtn:disabled {
       cursor: not-allowed;
       color: var(--main-color);
       background-color: var(--font-color);
-    } */
+    }
 
     div {
       margin: auto;
