💄 article 스타일 수정 : article 내 width, max-width 적용 및 img min-width 속성 제거

--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,11 @@ body {
   max-width: 16rem;
 }
 
+article {
+  width: 100%;
+  max-width: 38rem;
+}
+
 article a {
   display: flex;
   flex-direction: column;
@@ -78,8 +83,6 @@ article a {
   img {
     border-radius: 1rem;
     width: 100%;
-    min-width: 30rem;
-    max-width: 38rem;
     border: var(--border-color) solid 0.1rem;
     height: auto;
     aspect-ratio: 1 / 1;
