💄 cart 및 order 의 상품 img 스타일수정 : 테두리 및 비율 수정

--- a/css/cart.css
+++ b/css/cart.css
@@ -117,6 +117,8 @@ main {
         height: 16rem;
         border-radius: 1rem;
         grid-area: img;
+        border: var(--border-color) solid 0.1rem;
+        border-radius: 1rem;
       }
       p {
         font-size: 1.4rem;
