--- a/css/order.css
+++ b/css/order.css
@@ -66,6 +66,10 @@ main {
       height: 10.4rem;
       border-radius: 1rem;
       margin-right: 3.6rem;
+      border: var(--border-color) solid 0.1rem;
+      border-radius: 1rem;
+      aspect-ratio: 1 / 1;
+      width: 100%;
     }
     .order-details {
       flex: 1.4;
@@ -379,7 +383,7 @@ input[type="checkbox"]:checked {
   .order-list article {
     img {
       margin-right: 0.5rem;
-      max-width: 5rem;
+      /* max-width: 5rem; */
       height: auto;
     }
     .price,
